--- a/my-site/_config.yml
+++ b/my-site/_config.yml
@@ -22,8 +22,8 @@ title: Todo List App
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   A simple todo list app built with HTML, CSS, and JavaScript
-baseurl: "/todo-list-app" # the subpath of your site, e.g. /blog
-url: "https://kavididesilva-solid-potato-7r659jwpqpjcrp6q-3000.preview.app.github.dev/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
